--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
   </head>
 {% block tabs %}
 
-<div align="center"><h1>Matching with Vikings</h1></div>
+<div align="center" class="noisedark"><h1><font color="white">Matching with Vikings<font></h1></div>
   <div id="tabs">
     <ul id="tabnav">
       <form action="" method="POST">
@@ -60,9 +60,9 @@ Results</button></li>
 </font>
 {% endblock %}
 <body>
-
+<div class = "noise">
 {% block body %}
 {% endblock %}
-
+</div>
 </body>
 </html>
