--- a/templates/create.html
+++ b/templates/create.html
@@ -14,7 +14,7 @@
 <form id="formcreate" action="" method="POST">
 <font color="#013F5C" align="center">
 <div algin="center"><br>
-   Survey Name:<input type="text" size="25" style="height:2em;line-height:1.5em;" name="surveyname" class="button pink" placeholder="Name Your Survey"></input><br><br>
+   Survey Name:<input type="text" size="25" style="height:2em;line-height:1.5em;" name="surveyname" class="button yellow" placeholder="Name Your Survey"></input><br><br>
 Write questions for your survey below, and indicate whether the answer should be in number form (from 1-5) or word form (Strongly Disagree-Strongly Agree).<br><br>
       <p>1. <input type="text" name="q1" class="button magenta" placeholder="Question 1" size="80" style="height:2em;line-height:1.5em;" >
       <input type="radio" name="q1type" value="number" checked="checked">number</input>
@@ -32,7 +32,7 @@ Write questions for your survey below, and indicate whether the answer should be
       <input type="radio" name="q5type" value="number" checked="checked">number</input>
       <input type="radio" name="q5type" value="word">word</input> 
 <br><br>     
-      <button type="submit" name="submitcreate" value="        Create        " class="button red rounded large">Create</button>
+      <button type="submit" name="submitcreate" value="        Create        " class="button blue rounded large">Create</button>
 </div>
 </form>
 
