--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,12 @@
 {% endblock %}
 {% block tabs %}{{super()}}{% endblock %}
 {% block body %}
-  <style type="text/css">@import "{{url_for("static", filename="css/main.css")}}";</style>
 <div class="content">
   <font color="#013F5C">
   <center>
     <div class="text"><br><br><font size = "5">
-      <strong><p>Welcome to the matching site!</font></p></strong>
-      </br></br>
+      <strong><h3>Welcome to the matching site!</font></font></p></strong>
+      </br>
       <p><style:"font-weight:normal;">This is the place to find your match! Be it a relationship, mentorship, tutoring, or any other type of match you can think of. To ensure that you find a match that is perfect for YOU, you can even create your own surveys! For example, if you want to find your ideal roommate, you can either take an existing roommate survey or create your very own. If you take an existing roommate survey, you can see who your match is by going to the Results Page. If you choose to create your own survey, simply do so through the Create Page. Upon creating the survey, take it yourself and then simply wait for others to take it as well! We hope you find your match, enjoy!</p></h4>
     </div>
 <br>
