--- a/templates/signup.html
+++ b/templates/signup.html
@@ -50,7 +50,7 @@ Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em
     </div>
 
   <div id="input" align="center" >
-      <button class="button red rounded large" type="submit" name="submitsignup" value="Signup" class="">Signup</button>
+      <button class="button blue rounded large" type="submit" name="submitsignup" value="Signup" class="">Signup</button>
       <br><br>
     </form>
   </div>
