more beauty edits!!

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
 
 <center>
 {% if user %}
-<br><b><font size="4">Looking at the profile of:</font></b>
+<br><font size="4"><b>Looking at the profile of:</font></b>
 <div id="anyUser" align="center">
 {{user}}
 </div>
@@ -24,7 +24,7 @@
 </div>
 {% endif %}
 
-<br><b><font size="4">Logged in as:</font></b><div id="userInfo" align="center">
+<br><br><font size="4"><b>Logged in as:</font></b><div id="userInfo" align="center">
 </div>
 <div id="ytapiplayer2">
 </div>
