--- a/templates/survey.html
+++ b/templates/survey.html
@@ -8,7 +8,7 @@
 <form action="" method="POST">
 <font color="#013F5C">
 <center><br>
-<h2>Choose a survey to take!</h2><br>
+<h2>Choose a survey to take!</h2>
 <select class="button blue" name ="survey_selection" id = "names">
 {% for survey in surveynames%}
 <option><font color="#013F5C">
