--- a/templates/create.html
+++ b/templates/create.html
@@ -8,7 +8,7 @@
 <div class="content">
 <font color="#013F5C">
     <div class="text" align="center">
-      <h2>Create Your Own Survey!</h2>
+      <br><h2>Create Your Own Survey!</h2>
     </div>
 </div>
 <form id="formcreate" action="" method="POST">
