--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
    <font color="#013F5C">
   <center>
     <div class="text">
-      <br><h2>Welcome to your Profile.</h2></br>
+      <br><h2>Welcome to the Profile page.</h2></br>
     </div>
   </center>
 </div>
@@ -20,13 +20,13 @@
 <div id="anyUser" align="center">
 {{user}}
 </div>
-<div id="ytapiplayer1">
+<div id="ytapiplayer2">
 </div>
 {% endif %}
 
 <br><br><font size="4"><b>Logged in as:</font></b><div id="userInfo" align="center">
 </div>
-<div id="ytapiplayer2">
+<div id="ytapiplayer1">
 </div>
 </center>
 <script src="/static/js/profile.js"></script>
