--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,17 +36,18 @@ Age:   <input type="text" size="25" style="height:2em;line-height:1.5em;" name="
 <div id="input" align="center">
 Name: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="RealName" class="button magenta" placeholder="Input your full name"></input>
 <br><br>
-Gender: <input type="radio" size="25" style="height:2em;line-height:1.5em;" name="Gender" class="button magenta" value = "Male">Male</input>
+Gender: <input type="radio" size="25"
+  style="height:2em;line-height:1.5em;" name="Gender" class="button
+  magenta" value = "Male"> Male </input>
 
-<input type="radio" name="Gender" class="" value = "Female">Female  </input>
+<input type="radio" name="Gender" class="" value = "Female"> Female  </input>
 <br><br>
 Favorite Hobby: <input type="text" size="25" style="height:2em;line-height:1.5em;" name="Hobbies" class="button magenta" placeholder = "Input your favorite hobby"></input>
 <br><br>
 
-<!-- URL of favorite youtube video: <input type="text" size="25"
+URL Of Favorite Youtube Video: <input type="text" size="25" class="button magenta"
   style="height:2em;line-height:1.5em;" name="Youtube" class=""
-  placeholder = "Input the URL of your favorite youtube
-  video"></input>  -->
+  placeholder = "Input URL"></input>
     </div>
 
   <div id="input" align="center" >
