--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
   </head>
 {% block tabs %}
 
-<div align="center" class="noisedark"><font size="7" color="white">Matching with Vikings<font></div>
+<div align="center" class="noisedark"><font size="7" color="white"><p>Matching with Vikings</p><font></div>
   <div id="tabs">
     <ul id="tabnav">
       <form action="" method="POST">
